--- a/index.html
+++ b/index.html
@@ -16,15 +16,68 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <!-- FONT AWESOME -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- PONCHO -->
+    <!-- poncho.min.css rompe estilos de bootstrap 4 -->
+    <!-- <link rel="stylesheet" href="wwwroot/lib/poncho/dist/css/poncho.min.css"> -->
+    <link rel="stylesheet" href="wwwroot/lib/poncho/dist/css/icono-arg.css">
+
     <title>Lanús Unida</title>
 </head>
 
 <body>
+    <!-- HEADER -->
     <div class="container">
         <div class="jumbotron mt-5 bg-granate text-white">
             <h1 class="display-4"><strong>Lanús</strong> unida</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                 labore et dolore magna aliqua.</p>
+        </div>
+    </div>
+    <!-- CARDS -->
+    <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+            <!-- RECLAMOS -->
+            <div class="col mb-4">
+                <div class="card">
+                    <div class="card-header card-header-height d-flex align-items-center">
+                        <span class="flex-fill text-center"><i class="icono-arg-genero fa-4x"></i></span>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Reclamos</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-primary">Entrar</a>
+                    </div>
+                </div>
+            </div>
+            <!-- TRABAJO -->
+            <div class="col mb-4">
+                <div class="card">
+                    <div class="card-header card-header-height d-flex align-items-center">
+                        <span class="flex-fill text-center"><i class="fa fa-camera fa-4x"></i></span>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Trabajo</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-primary">Entrar</a>
+                    </div>
+                </div>
+            </div>
+            <!-- TRABAJO -->
+            <div class="col mb-4">
+                <div class="card">
+                    <div class="card-header card-header-height d-flex align-items-center">
+                        <span class="flex-fill text-center">ICONO</span>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Donaciones</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <a href="#" class="btn btn-primary">Entrar</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Optional JavaScript -->
