--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 <body>
     <!-- HEADER -->
     <div class="container">
-        <div class="jumbotron mt-5 bg-granate text-white">
+            <nav class="navbar navbar-light bg-light">
+                    <a class="navbar-brand" href="#">
+                        <img src="wwwroot/images/favicon_io/favicon-32x32.png" width="30" height="30" alt="">
+                    </a>
+                </nav>
+        <div class="jumbotron mt-comun bg-granate text-white">
             <h1 class="display-4"><strong>Lanús</strong> unida</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                 labore et dolore magna aliqua.</p>
@@ -42,8 +47,8 @@
             <!-- RECLAMOS -->
             <div class="col mb-4">
                 <div class="card">
-                    <div class="card-header card-header-height d-flex align-items-center">
-                        <span class="flex-fill text-center"><i class="icono-arg-genero fa-4x"></i></span>
+                    <div class="card-header card-header-height d-flex align-items-center bg-maiz-light">
+                        <span class="flex-fill text-center"><i class="icono-arg-marcador-ubicacion-2 fa-4x"></i></span>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Reclamos</h5>
@@ -55,11 +60,11 @@
             <!-- TRABAJO -->
             <div class="col mb-4">
                 <div class="card">
-                    <div class="card-header card-header-height d-flex align-items-center">
-                        <span class="flex-fill text-center"><i class="fa fa-camera fa-4x"></i></span>
+                    <div class="card-header card-header-height d-flex align-items-center bg-cielo-light">
+                        <span class="flex-fill text-center"><i class="icono-arg-maletin-check fa-4x"></i></span>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Trabajo</h5>
+                        <h5 class="card-title">Empleos</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <a href="#" class="btn btn-primary">Entrar</a>
                     </div>
@@ -68,8 +73,8 @@
             <!-- TRABAJO -->
             <div class="col mb-4">
                 <div class="card">
-                    <div class="card-header card-header-height d-flex align-items-center">
-                        <span class="flex-fill text-center">ICONO</span>
+                    <div class="card-header card-header-height d-flex align-items-center bg-verdin-light">
+                        <span class="flex-fill text-center"><i class="icono-arg-solidaridad fa-4x"></i></span>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Donaciones</h5>
@@ -80,6 +85,12 @@
             </div>
         </div>
     </div>
+    <!-- END:CARDS -->
+    <!-- MAPA -->
+    <div class="container">
+        <h2>Mapa de reclamos</h2>
+    </div>
+    <!-- END:MAPA -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
