--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <title>Lanús Unida</title>
 </head>
 
-<body class="bg-principal">
+<body class="bg-principal main">
     <!-- HEADER -->
-    <div class="container">
-        <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light">
+        <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="wwwroot/images/favicon_io/favicon-32x32.png" width="30" height="30" alt="">
             </a>
@@ -49,7 +49,9 @@
                 <!-- <li class="nav-item"><a class="nav-link p-1" href="#" target="_blank" rel="noopener"
                         aria-label="Mail"><i class="fa fa-envelope fa-2x text-granate-light"></i></a></li> -->
             </ul>
-        </nav>
+        </div>
+    </nav>
+    <div class="container">
         <div class="jumbotron mt-comun bg-granate text-white">
             <h1 class="display-4"><strong>Lanús</strong> unida</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -61,42 +63,46 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
             <!-- RECLAMOS -->
             <div class="col mb-4">
-                <div class="card">
-                    <div class="card-header card-header-height d-flex align-items-center bg-maiz-light">
-                        <span class="flex-fill text-center"><i class="icono-arg-marcador-ubicacion-2 fa-4x"></i></span>
+                <a href="#" class="text-decoration-none text-dark">
+                    <div class="card">
+                        <div class="card-header card-header-height d-flex align-items-center bg-maiz-light">
+                            <span class="flex-fill text-center"><i
+                                    class="icono-arg-marcador-ubicacion-2 fa-4x"></i></span>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Reclamos</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Reclamos</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-primary">Entrar</a>
-                    </div>
-                </div>
+                </a>
             </div>
             <!-- TRABAJO -->
             <div class="col mb-4">
-                <div class="card">
-                    <div class="card-header card-header-height d-flex align-items-center bg-cielo-light">
-                        <span class="flex-fill text-center"><i class="icono-arg-maletin-check fa-4x"></i></span>
+                <a href="#" class="text-decoration-none text-dark">
+                    <div class="card">
+                        <div class="card-header card-header-height d-flex align-items-center bg-cielo-light">
+                            <span class="flex-fill text-center"><i class="icono-arg-maletin-check fa-4x"></i></span>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Empleos</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Empleos</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-primary">Entrar</a>
-                    </div>
-                </div>
+                </a>
             </div>
             <!-- TRABAJO -->
             <div class="col mb-4">
-                <div class="card">
-                    <div class="card-header card-header-height d-flex align-items-center bg-verdin-light">
-                        <span class="flex-fill text-center"><i class="icono-arg-solidaridad fa-4x"></i></span>
+                <a href="#" class="text-decoration-none text-dark">
+                    <div class="card">
+                        <div class="card-header card-header-height d-flex align-items-center bg-verdin-light">
+                            <span class="flex-fill text-center"><i class="icono-arg-solidaridad fa-4x"></i></span>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Donaciones</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Donaciones</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-primary">Entrar</a>
-                    </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
