--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="jumbotron mt-comun bg-granate text-white">
             <h1 class="display-4"><strong>Lanús</strong> unida</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua.</p>
+                labore et dolore.</p>
         </div>
     </div>
     <!-- CARDS -->
